fix: spacing

--- a/src/assets/styles/components/mastodon-post.css
+++ b/src/assets/styles/components/mastodon-post.css
@@ -1,4 +1,6 @@
 .mastodon-post-wrapper {
+  margin-bottom: var(--spacing-base);
+
   & dl,
   dt {
     display: flex;
